// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      aria-invalid="false"
      id="<removed>"
      size="12"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd.
    </span>
  </div>
</ds-field>
`;

exports[`Counter 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Legg til en beskrivelse
  </label>
  <textarea
    aria-describedby="<removed>"
    aria-invalid="false"
    id="<removed>"
    rows="2"
    style="--_ds-field-sizing: 70px;"
  >
  </textarea>
  <p
    data-field="counter"
    data-label="10 tegn igjen"
    data-limit="10"
    data-state="under"
    id="<removed>"
  >
  </p>
</ds-field>
`;

exports[`Position 1`] = `
<div style="max-width: 200px; margin: auto;">
  <div style="display: flex; flex-direction: column; gap: var(--ds-size-2);">
    <ds-field
      data-clickdelegatefor="<removed>"
      data-position="end"
    >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Flymodus
      </label>
      <input
        aria-invalid="false"
        id="<removed>"
        role="switch"
        type="checkbox"
      >
    </ds-field>
    <ds-field
      data-clickdelegatefor="<removed>"
      data-position="end"
    >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Lydløs
      </label>
      <input
        aria-invalid="false"
        id="<removed>"
        role="switch"
        type="checkbox"
      >
    </ds-field>
  </div>
</div>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    E-post
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    E-posten din brukes til å logge inn og motta varsler
  </div>
  <input
    aria-describedby="<removed>"
    aria-invalid="true"
    id="<removed>"
    type="text"
    value="ola nordmann@udir.no"
  >
  <p
    data-field="validation"
    id="<removed>"
  >
    Du må oppgi en gyldig e-postadresse
  </p>
</ds-field>
`;
